--- a/main.css
+++ b/main.css
@@ -1,3 +1,37 @@
+* {
+    font-family: 'Lato', sans-serif;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+/* main {
+  background-color: #8FBC8F;
+} */
+
+.main-img {
+  background-image: url('team.jpg');
+  background-size: cover;
+  background-position: center;
+  margin-top: 80px;
+  height: 70vh;
+  margin-bottom: 0;
+}
+
+.main-info {
+  background-image: url('bike.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 120vh;
+  margin-top: 400px;
+  filter: blur(3px);
+}
+.sam {
+  border: 5px solid  #B22222;
+  border-radius: 30px;
+  font-size: 24px;
+  text-align: center;
+  background-color: #FAEBD7;
+}
 .fixed-header {
     background-color: #B22222;
     position: fixed;
@@ -5,33 +39,72 @@
     left: 0;
     width: 100%;
   }
-  
+
   .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 30px 20px;
   }
-  
+
   .navbar ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
   }
-  
+
   .navbar li {
     margin-right: 20px;
   }
-  
+
   .navbar li:last-child {
     margin-right: 0;
   }
-  
+
   .navbar a {
-    color: #fff;
+    color: #FAEBD7;
     text-decoration: none;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 24px;
   }
-  
+
+  .first-text {
+    float: left;
+    width: 40%;
+    padding: 20px 15px 40px 15px;
+    margin: 60px 40px 0 80px;
+    border: 5px solid  #B22222;
+    border-radius: 30px;
+    font-size: 24px;
+    text-align: center;
+    background-color: #FAEBD7;
+  }
+
+
+  .second-text{
+    float: left;
+    width: 40%;
+    padding: 20px 15px 40px 15px;;
+    margin: 60px 20px 0 60px;
+    border: 5px solid  #B22222;
+    border-radius: 30px;
+    font-size: 24px;
+    text-align: center;
+    background-color: #FAEBD7;
+  }
+
+ footer {
+    background-color: #B22222;
+    color: #FFFFFF;
+    padding: 20px;
+    margin: 0;
+  }
+
+  .text-footer {
+    color: #FAEBD7;
+    text-align: center;
+    text-decoration: none;
+    font-weight: 300;
+    font-size: 20px;
+  }
