--- a/main.css
+++ b/main.css
@@ -5,57 +5,22 @@
 }
 
 .main-img {
-  background-image: url('team.jpg');
-  background-size: cover;
-  background-position: center;
   margin-top: 80px;
-  height: 70vh;
   margin-bottom: 0;
 }
 
-.main-info {
-  background-image: url('bike.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 120vh;
-  margin-top: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.text {
-  border: 6px solid #556B2F;
-  border-radius: 60px;
-  font-size: 24px;
-  text-align: center;
-  background-color: #FAEBD7;
-  padding: 30px 20px 30px 20px;
-  margin: 30px 300px 30px 300px;
-  color: #556B2F;
-  font-weight: 600;
-  line-height: 1.5;
-}
 .fixed-header {
     background-color: #B22222;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-  }
-  body{
-    background-color: #FFE57C;
-    }
-    .navbar{
-    padding-left: 350px;
-    }
+}
+.icon-bar{
+  background-color: #FAEBD7;
+  padding-top: 4px;
+}
 
-    #nav-list a {
-    color: #FF7CD8;
-    }
-    #nav-list a:hover{
-    color: #FF7CD8;
-    }
-/*
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -81,7 +46,7 @@
     text-decoration: none;
     font-weight: bold;
     font-size: 24px;
-  } */
+  }
   .dropdown{
     position: relative;
     z-index: 10;
@@ -111,23 +76,18 @@
       .dropdown__menu a{
         display: block;
         padding: 10px;
-        text-decoration: none;
         border-width: 0;
         border-top: 1px solid #e0e0e0;
       }
       .dropdown__menu a:hover{
         background-color:#e36767;
         color: #323b40;
+        text-decoration: none;
       }
 
-  .first-text {
-    float: left;
-    width: 40%;
-    padding: 20px 15px 40px 15px;
-    margin: 60px 40px 0 80px;
-    border: 5px solid  #B22222;
+  #card {
+    border: 3px solid  #B22222;
     border-radius: 30px;
-    font-size: 24px;
     text-align: center;
     background-color: #FAEBD7;
   }
