--- a/main.css
+++ b/main.css
@@ -89,6 +89,8 @@
     border: 3px solid  #B22222;
     border-radius: 30px;
     text-align: center;
+    font-size: 16px;
+    margin: 10px;
     background-color: #FAEBD7;
   }
 
