--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 .main-img {
-  margin-top: 80px;
+  margin-top: 60px;
   margin-bottom: 0;
 }
 
@@ -38,14 +38,15 @@
 
   .navbar li {
     margin-right: 20px;
-    padding-top: 10px;
+    padding-top: 13px;
   }
 
   .navbar a {
     color: #FAEBD7;
     text-decoration: none;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 18px;
+    padding: 10px 0 0 10px;
   }
   .dropdown{
     position: relative;
@@ -90,11 +91,9 @@
     border-radius: 30px;
     text-align: center;
     font-size: 16px;
-    margin: 10px;
+    margin: 55px;
     background-color: #FAEBD7;
   }
-
-
   .second-text{
     float: left;
     width: 40%;
